--- a/Desktop App/qt/client/client/mainwindow.ui
+++ b/Desktop App/qt/client/client/mainwindow.ui
@@ -24,6 +24,13 @@
        <enum>QFrame::Raised</enum>
       </property>
       <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="1">
+        <widget class="QLabel" name="label_connection_status">
+         <property name="text">
+          <string>TextLabel</string>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="0">
         <widget class="QPushButton" name="pushButton_connect">
          <property name="text">
@@ -31,10 +38,31 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
-        <widget class="QLabel" name="label_connection_status">
+       <item row="1" column="1">
+        <widget class="QPushButton" name="btnReceiveConfig">
          <property name="text">
-          <string>TextLabel</string>
+          <string>Recevoir la configuration...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QPushButton" name="btnSendConfig">
+         <property name="text">
+          <string>Envoyer la configuration...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QPushButton" name="btnLoadConfig">
+         <property name="text">
+          <string>Charger une configuration...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QPushButton" name="btnSaveConfig">
+         <property name="text">
+          <string>Sauvegarder la configuration...</string>
          </property>
         </widget>
        </item>
@@ -52,7 +80,7 @@
      <x>0</x>
      <y>0</y>
      <width>684</width>
-     <height>21</height>
+     <height>18</height>
     </rect>
    </property>
   </widget>
