--- a/Desktop App/qt/client/client/resource.qrc
+++ b/Desktop App/qt/client/client/resource.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/equipement">
         <file alias="circuit">rc/equipement/circuit.png</file>
         <file alias="light">rc/equipement/light.png</file>
+        <file alias="ledstrip">rc/equipement/ledstrip.jpg</file>
     </qresource>
     <qresource prefix="/application">
         <file alias="app_icon">rc/app_icon.jpg</file>
