--- a/Desktop App/wpf/ArduinoAdmin/ArduinoAdmin/MainWindow.xaml
+++ b/Desktop App/wpf/ArduinoAdmin/ArduinoAdmin/MainWindow.xaml
@@ -1,11 +1,9 @@
 ﻿<Window x:Class="ArduinoAdmin.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vue="clr-namespace:ArduinoAdmin.Vues"
+        xmlns:vue="clr-namespace:ArduinoAdmin.Vues.Synoptique"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <StackPanel Orientation="Vertical">
-            <vue:Synoptique Width="200" Height="200"></vue:Synoptique>
-        </StackPanel>
+        <vue:Editor></vue:Editor>
     </Grid>
 </Window>
